# LearnFFmpeg

./: CMakeLists.txt  FFmpeg.cpp  FFmpeg.h  README.md  Untitled Diagram.drawio  avio_reading.c  decode_audio.c  decode_video.c  decode_video.cpp  decode_video_implement.cpp  demuxing_decoding.c  encode_audio.c  encode_video.c  encode_video.cpp  ffhash.c  filter_audio.c  filtering_video.c  hw_decode.c  main.cpp  muxing.c  play_audio.cpp  play_video.cpp  qsvdec.c  remuxing.c  resample_audio.c  scaling_video.c  sdl_timer.cpp  simplest_ffmpeg_player_su.cpp  test_ofstream.cpp  tutorial05_decode_audio.drawio
dranger/: README.md  beeper.cpp  tutorial04.c  tutorial04.md  tutorial04.origin.c  tutorial05.c  tutorial05.origin.c  tutorial06.origin.c  tutorial07.origin.c
dranger/origin/: tutorial05.c
